--- a/Treino_aplicacao_web/Views/Home/About.cshtml
+++ b/Treino_aplicacao_web/Views/Home/About.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Sobre";
 }
 <main aria-labelledby="title">
     <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+    <h3>Lorem Ipsum</h3>
 
-    <p>Use this area to provide additional information.</p>
+    <p>Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro.</p>
 </main>
