--- a/Treino_aplicacao_web/Views/Home/Contact.cshtml
+++ b/Treino_aplicacao_web/Views/Home/Contact.cshtml
@@ -1,15 +1,14 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contato";
 }
 <main aria-labelledby="title">
     <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
 
     <address>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399<br />
-        <abbr title="Phone">P:</abbr>
-        425.555.0100
+        Empresa teste<br />
+        Av. Getúlio Vargas, 597 - Centro, Criciúma - SC, 88801-500<br />
+        <abbr title="Phone">Numero:</abbr>
+        +55 (48) 3433-9753
     </address>
 
     <address>
